# WEB_Module_07

./: CLI.py  config.ini  my_select.py  pyproject.toml  seeds.py
migrations/: env.py
migrations/versions/: 163db76b6409_init.py
src/: CRUD.py
